# stm32f4-ai-register-dev

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
cmake/: arm-none-eabi-gcc.cmake
src/: main.c
src/beep/: beep.c  beep.h  beep.md
src/clock/: clock.c  clock.h  clock.md
src/delay/: delay.c  delay.h  delay.md
src/key/: key.c  key.h  key.md
src/lcd/: lcd.c  lcd.h  lcd.md
src/led/: led.c  led.h  led.md
src/timer/: basic_timer.c  basic_timer.h  basic_timer.md
